--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -52,6 +52,16 @@
         "string_view": "cpp",
         "unordered_map": "cpp",
         "variant": "cpp",
-        "vector": "cpp"
+        "vector": "cpp",
+        "algorithm": "cpp",
+        "__threading_support": "cpp",
+        "complex": "cpp",
+        "condition_variable": "cpp",
+        "memory": "cpp",
+        "list": "cpp",
+        "ostream": "cpp",
+        "regex": "cpp",
+        "set": "cpp",
+        "typeindex": "cpp"
     }
 }
